# go-go-web

./: .gitignore  .pylintrc  CONTRIBUTING.md  LICENSE.md  README.md  _output_dir.py  conftest.py  convert.py  pyproject.toml  pytest.ini  setup.cfg
.github/workflows/: ci.yml
examples/: examples1.md  post.md  test2.txt  test3.md  til_post1.txt  til_post2.txt  til_post3.md
input/: examples.txt  post.md  test1.txt  test3.md
src/: convert.py  sample.py  utils.py
src/gogoweb/: config.toml  convert.py  utils.py
tests/: convert_test.py  utils_test.py
